<resources>
    <string name="app_name">"Schlauebox Admin"</string>
    <string name="main_no_parcel_lockers">"You currently don’t have access to any parcel lockers. Please get in proximity to register device(s)."</string>
    <string name="mpl_locker_details_title">"Locker details"</string>
    <string name="main_locker_battery">"Battery:"</string>
    <string name="main_locker_fw">"Nina firmware version:"</string>
    <string name="main_locker_stm_ver">"STM firmware version:"</string>
    <string name="main_locker_settings">"Locker settings"</string>
    <string name="main_locker_manage_peripherals">"Manage peripherals"</string>
    <string name="main_locker_manage_users">"Manage users"</string>
    <string name="main_locker_manage_network">"Manage network"</string>
    <string name="main_locker_registration_started">"Registration successfully started!"</string>
    <string name="main_locker_registration_error">"Error in registration!"</string>
    <string name="main_locker_epaper_update_started">"E-paper update started"</string>
    <string name="main_locker_epaper_update_error">"E-paper update error"</string>
    <string name="main_locker_ble_connection_error">"Error while connecting the device"</string>
    <string name="main_locker_apn_list">"Available networks"</string>
    <string name="app_common_internet_connection">"Please check your internet connection!"</string>
    <string name="manage_mpl_access_remove_access">"Do you want to reject user request on MPL?"</string>
    <string name="manage_mpl_access_remove_rights">"Do you want to remove user rights on MPL?"</string>
    <string name="main_locker_epaper_update">"E-paper update"</string>
    <string name="nav_settings_language">"Languages"</string>
    <string name="manage_peripherals_inproximity">"In proximity"</string>
    <string name="manage_peripherals_not_inproximity">"Not in proximity"</string>
    <string name="intro_register_show_password">"Show password"</string>
    <string name="nav_home_mpl_title">"Multi"</string>
    <string name="nav_home_spl_title">"Single"</string>
    <string name="nav_alarms_title">"Alarms"</string>
    <string name="nav_settings_title">"Settings"</string>
    <string name="nav_settings_user_details">"User details"</string>
    <string name="nav_settings_change_password">"Change password"</string>
    <string name="login_submit_title">"Sign in"</string>
    <string name="register_submit_title">"Register"</string>
    <string name="register_in_progress">"Register in progress..."</string>
    <string name="forgot_password_title">"Forgot Your Password?"</string>
    <string name="forgot_password_description_title">"Please enter your email address"</string>
    <string name="forgot_password_send">"Send"</string>
    <string name="key_sharing_delete_key_message">"Are you sure you want to remove locker from master device?"</string>
    <string name="pending">"Pending"</string>
    <string name="reset_password_title">"Reset Your Password"</string>
    <string name="reset_password_description_title">"Please enter your new password"</string>
    <string name="reset_password_pin">"Recovery pin"</string>
    <string name="delete_pending">"Delete pending"</string>
    <string name="registration_pending">"Registration pending"</string>
    <string name="manage_peripherals_registered">"Registered"</string>
    <string name="manage_peripherals_unregistered">"Unregistered"</string>
    <string name="main_gsm_status">"Modem status:"</string>
    <string name="main_gsm_rssi">"Modem RSSI:"</string>
    <string name="main_gsm_modem_queue">"Modem queue:"</string>
    <string name="main_number_of_lockers">"Number Of Lockers:"</string>
    <string name="manage_peripherals_title">"Peripheral %s"</string>
    <string name="nav_settings_app_version">"App version: %s"</string>
    <string name="locker_settings_error_name_empty_warning">"Please enter the name!"</string>
    <string name="locker_settings_error_address_empty_warning">"Please enter the address!"</string>
    <string name="edit_user_notification_setting_push_and_email">"Push and E-Mail notification"</string>
    <string name="peripheral_settings_force_open">"Force Open"</string>
    <string name="peripheral_settings_discover_peripheral">"Discover"</string>
    <string name="default_notification_channel_id">"fcm_default_channel"</string>
    <string name="default_notification_channel_name">"News"</string>
    <string name="locker_settings_save_changes">"Save changes"</string>
    <string name="edit_user_validation_blank_fields_exist">"Please enter all user information."</string>
    <string name="edit_user_validation_current_password_invalid">"Current password not correct!"</string>
    <string name="edit_user_validation_current_user_invalid">"Current user is not valid!"</string>
    <string name="edit_user_validation_passwords_do_not_match">"Password is incorrect"</string>
    <string name="edit_user_validation_password_min_6_characters">"Password must be at least 6 characters long"</string>
    <string name="edit_user_validation_username_min_4_characters">"Username must be at least 4 characters long"</string>
    <string name="edit_user_validation_terms_and_conditions_not_checked">"Please accept General Terms and Conditions and Privacy Statement"</string>
    <string name="message_email_invalid">"Email address not valid!"</string>
    <string name="app_generic_name">"Name"</string>
    <string name="app_generic_address">"Address"</string>
    <string name="app_generic_email">"E-mail"</string>
    <string name="app_generic_submit">"Submit"</string>
    <string name="app_generic_clear_all">"Clear all"</string>
    <string name="app_generic_no_ble">"Please turn bluetooth on."</string>
    <string name="app_generic_confirm">"Confirm"</string>
    <string name="app_generic_cancel">"Cancel"</string>
    <string name="app_generic_sign_in">"Sign in"</string>
    <string name="app_generic_password">"Password"</string>
    <string name="app_generic_username">"Username"</string>
    <string name="app_generic_no_network">"No Internet connection."</string>
    <string name="app_generic_size">"Size: %s"</string>
    <string name="app_generic_repeat_password">"Repeat password"</string>
    <string name="successfully_saved_data">"Successfully saved data!"</string>
    <string name="select_mpl_size">"Please select size of MPL locker to register"</string>
    <string name="registration_error">"Error in registration!"</string>
    <string name="successfull_saved_network_configuration">"Network configuration setup successfully!"</string>
    <string name="successfully_updated">"Successfully updated"</string>
    <string name="error_updating_mpl">"Error while updating MPL device"</string>
    <string name="app_generic_home">"Home"</string>
    <string name="app_generic_alerts">"Alerts"</string>
    <string name="app_generic_settings">"Settings"</string>
    <string name="main_locker_force_open_update_error">"Force open error"</string>
    <string name="assing_mpl_section">"Assign MPL section."</string>
    <string name="group_manage_users">"Group:"</string>
    <string name="mpl_or_spl_unregistered">"UNREGISTERED"</string>
    <string name="app_generic_not_activated">"Not activated"</string>
    <string name="pin_management_title">"PIN management"</string>
    <string name="pin_management_description">"Enable pin saving"</string>
    <string name="app_generic_server_error">"Error while connecting to server. Please check your internet connection."</string>
    <string name="locker_settings_power_saving_title">"Power saving mode"</string>
    <string name="locker_settings_power_saving_cb_text">"Enable battery saving mode (slower performances)"</string>
    <string name="peripheral_key_purpose">"Key purpose"</string>
    <string name="peripheral_key_delivery">"Delivery"</string>
    <string name="peripheral_key_created_for">"Created for"</string>
    <string name="peripheral_key_pick_home">"pick@home"</string>
    <string name="peripheral_key_created_by">"Created by"</string>
    <string name="tablet_refresh_user_list">"Refresh user list"</string>
    <string name="main_locker_user_refresh_list_update_started">"User refresh list started"</string>
    <string name="main_locker_user_refresh_list_update_error">"User refresh list error"</string>
    <string name="locker_occupied">"occupied"</string>
    <string name="locker_empty">"empty"</string>
    <string name="app_generic_warning">"Warning"</string>
    <string name="locker_settings_power_unchecking_checkbox_message">"Please ensure the device has external power. Otherwise, these batteries will discharge within 1 month."</string>
    <string name="main_locker_tablet_app_ver">"Application version:"</string>
    <string name="main_locker_mac">"MAC address:"</string>
    <string name="main_not_in_range">"Device is not in proximity"</string>
    <string name="main_locker_rat">"RAT:"</string>
    <string name="main_last_update">"Last updated:"</string>
    <string name="main_locker_reboot">"Reboot"</string>
    <string name="main_number_of_available_lockers_size_xs">"XS:"</string>
    <string name="main_number_of_available_lockers_size_s">"S:"</string>
    <string name="main_number_of_available_lockers_size_m">"M:"</string>
    <string name="main_number_of_available_lockers_size_l">"L:"</string>
    <string name="main_number_of_available_lockers_size_xl">"XL:"</string>
    <string name="app_generic_notifications">"Notifications"</string>
    <string name="app_generic_error">"Error"</string>
    <string name="settings_alert_langugage_changed">"App was reloaded to change the language"</string>
    <string name="settings_update_success">"All changes are saved"</string>
    <string name="app_generic_password_doesnt_match">"Passwords don't match"</string>
    <string name="edit_user_notification_setting_email">"Email"</string>
    <string name="nav_settings_type_new_password">"Type new password"</string>
    <string name="nav_settings_retype_new_password">"Retype new password"</string>
    <string name="app_generic_enter_ble">"Not in proximity"</string>
    <string name="spl_plus_title">"SPL PLUS"</string>
    <string name="spl_plus_keypad_type">"Choose your keyboard layout"</string>
    <string name="spl_plus_manage_keyboard">"Manage locker type
"</string>
    <string name="spl_plus_single_keyboard_multiple_selection">"Please select only one peripheral."</string>
    <string name="spl_plus_single_keyboard_wrong_selection">"Please select L size of peripheral."</string>
    <string name="p16_remove_all">"REMOVE ALL"</string>
    <string name="p16_remove_description">"Are you sure you want to remove P16 peripheral from master device?"</string>
    <string name="edit_validation_blank_fields_exist">"Please enter all user information."</string>
    <string name="device_latitude">"Latitude"</string>
    <string name="device_longitude">"Longitude"</string>
    <string name="select_locker_location_title">"Select locker location"</string>
    <string name="spl_locker_occupied">"Locker is already occupied."</string>
    <string name="manage_peripherals_select_size">"Select size"</string>
    <string name="manage_users_no_users">"Currently there are no users on this device."</string>
    <string name="app_generic_success">"Success"</string>
    <string name="mpl_epaper_type">"Choose your epaper type"</string>
    <string name="main_locker_factory_reset">"Factory reset"</string>
    <string name="error_locker_reboot">"Error occurred while device rebooting"</string>
    <string name="e_paper_none">"none"</string>
    <string name="e_paper_low_resolution">"low-res"</string>
    <string name="e_paper_high_resolution">"hi-res"</string>
    <string name="delete_single_alerts_messages">"Are you sure you want to this message?"</string>
    <string name="stop_alerts_message">"Are you sure you want to stop receiving alerts for this device?"</string>
</resources>