<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/thmDialogBackgroundColor"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <hr.sil.android.smartlockers.adminapp.fonts.view.fonts.TextViewWithFont
        android:id="@+id/tvChooseSplDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:textSize="18sp"
        android:text="@string/mpl_epaper_type"
        android:textColor="?attr/thmLockerSettingsDialogTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeRegular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupEPaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseSplDialog" >

        <hr.sil.android.smartlockers.adminapp.fonts.RadioButtonWithFont
            android:id="@+id/noEpaper"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"

            android:maxLines="2"
            android:ellipsize="end"

            android:text="@string/e_paper_none"
            android:textColor="?attr/thmDialogTextColor"

            android:textSize="?attr/thmRadioButtonAndCheckBoxTextSize"
            app:font_name="?attr/thmMainFontName"
            app:font_type="?attr/thmMainFontTypeRegular"  />

        <hr.sil.android.smartlockers.adminapp.fonts.RadioButtonWithFont
            android:id="@+id/ePaperLowResolution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"

            android:maxLines="2"
            android:ellipsize="end"

            android:text="@string/e_paper_low_resolution"
            android:textColor="?attr/thmDialogTextColor"

            android:textSize="?attr/thmRadioButtonAndCheckBoxTextSize"
            app:font_name="?attr/thmMainFontName"
            app:font_type="?attr/thmMainFontTypeRegular"  />

        <hr.sil.android.smartlockers.adminapp.fonts.RadioButtonWithFont
            android:id="@+id/ePaperHighResolution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"

            android:maxLines="2"
            android:ellipsize="end"

            android:text="@string/e_paper_high_resolution"
            android:textColor="?attr/thmDialogTextColor"

            android:textSize="?attr/thmRadioButtonAndCheckBoxTextSize"
            app:font_name="?attr/thmMainFontName"
            app:font_type="?attr/thmMainFontTypeRegular"  />
    </RadioGroup>

    <hr.sil.android.smartlockers.adminapp.fonts.ButtonWithFont
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="?attr/thmButtonTextSizeInsideDialog"
        android:textColor="?attr/thmLoginButtonTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeMedium"
        android:background="?attr/thmMainButtonBackgroundColor"
        android:text="@string/app_generic_cancel"
        app:layout_constraintEnd_toStartOf="@id/btnConfirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupEPaper" />

    <hr.sil.android.smartlockers.adminapp.fonts.ButtonWithFont
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="?attr/thmButtonTextSizeInsideDialog"
        android:textColor="?attr/thmLoginButtonTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeMedium"
        android:background="?attr/thmMainButtonBackgroundColor"
        android:text="@string/app_generic_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupEPaper" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>
