<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/thmDialogBackgroundColor"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <hr.sil.android.smartlockers.adminapp.fonts.view.fonts.TextViewWithFont
        android:id="@+id/tvChooseSplDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/spl_plus_keypad_type"
        android:textColor="?attr/thmLockerSettingsDialogTextColor"
        android:textSize="18sp"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeBold"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseSplDialog" >

        <hr.sil.android.smartlockers.adminapp.fonts.RadioButtonWithFont
            android:id="@+id/spl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_home_spl_title"
            android:textColor="?attr/thmKeyboardLayoutTextColor"
            android:textAllCaps="true"

            android:textSize="?attr/thmRadioButtonAndCheckBoxTextSize"
            app:font_name="?attr/thmMainFontName"
            app:font_type="?attr/thmMainFontTypeRegular" />

        <hr.sil.android.smartlockers.adminapp.fonts.RadioButtonWithFont
            android:id="@+id/splPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/thmKeyboardLayoutTextColor"
            android:text="@string/spl_plus_title"

            android:textSize="?attr/thmRadioButtonAndCheckBoxTextSize"
            app:font_name="?attr/thmMainFontName"
            app:font_type="?attr/thmMainFontTypeRegular" />
    </RadioGroup>


    <hr.sil.android.smartlockers.adminapp.fonts.ButtonWithFont
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="?attr/thmButtonTextSizeInsideDialog"
        android:text="@string/app_generic_cancel"
        android:textColor="?attr/thmLoginButtonTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeMedium"
        android:background="?attr/thmMainButtonBackgroundColor"
        app:layout_constraintEnd_toStartOf="@id/btnConfirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <hr.sil.android.smartlockers.adminapp.fonts.ButtonWithFont
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="?attr/thmButtonTextSizeInsideDialog"
        android:text="@string/app_generic_confirm"
        android:textColor="?attr/thmLoginButtonTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeMedium"
        android:background="?attr/thmMainButtonBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_marginTop="5dp"
        android:text="@string/app_generic_confirm"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>
