<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/thmDialogBackgroundColor"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <hr.sil.android.smartlockers.adminapp.fonts.view.fonts.TextViewWithFont
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/stop_alerts_message"
        android:textColor="?attr/thmDialogTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeRegular"
        android:textSize="?attr/thmDialogDescriptionTextSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <hr.sil.android.smartlockers.adminapp.fonts.ButtonWithFont
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="?attr/thmButtonTextSizeInsideDialog"
        android:text="@string/app_generic_cancel"
        android:textColor="?attr/thmLoginButtonTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeMedium"
        android:background="?attr/thmMainButtonBackgroundColor"
        app:layout_constraintEnd_toStartOf="@id/btnSelect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

    <hr.sil.android.smartlockers.adminapp.fonts.ButtonWithFont
        android:id="@+id/btnSelect"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="?attr/thmButtonTextSizeInsideDialog"
        android:text="@string/app_generic_confirm"
        android:textColor="?attr/thmLoginButtonTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeMedium"
        android:background="?attr/thmMainButtonBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelect" />


</androidx.constraintlayout.widget.ConstraintLayout>
