<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp" >

    <hr.sil.android.smartlockers.adminapp.fonts.view.fonts.TextViewWithFont
        android:id="@+id/tvForgotPasswordDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:text="@string/forgot_password_description_title"
        android:textSize="17sp"
        android:textColor="?attr/thmDescriptionTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeRegular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <hr.sil.android.smartlockers.adminapp.fonts.view.fonts.TextViewWithFont
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:textAllCaps="true"

        android:textSize="?attr/thmDescriptionTextSize"
        android:letterSpacing="?attr/thmEdittextInputLetterSpacing"

        android:text="@string/app_generic_email"
        android:textColor="?attr/thmDescriptionTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeRegular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail">

        <hr.sil.android.smartlockers.adminapp.fonts.EdittextWithFont
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="?attr/thmLoggedInAvailableBottomLineEditTextColor"
            android:inputType="text"
            android:maxLines="1"

            android:letterSpacing="?attr/thmEdittextTextLetterSpacing"
            android:textSize="?attr/thmEdittextTextSize"
            android:paddingLeft="?attr/thmEdittextLeftPadding"

            android:singleLine="true"
            android:textColor="?attr/thmRegisterEdittextColor"
            android:textColorHint="@color/colorBlack"
            app:font_name="?attr/thmMainFontName"
            app:font_type="?attr/thmMainFontTypeRegular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/ivName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="?attr/thmEdittextMarginRight"
            android:paddingBottom="?attr/thmSettingsUserNameImagePaddingBottom"

            android:src="?attr/thmLoginEmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <hr.sil.android.smartlockers.adminapp.fonts.view.fonts.TextViewWithFont
        android:id="@+id/tvEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/edit_user_validation_blank_fields_exist"
        android:textColor="?attr/thmErrorTextColor"
        android:visibility="gone"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeRegular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:indeterminateDrawable="?attr/thmSplashProgressBar"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clPassword" />

    <hr.sil.android.smartlockers.adminapp.fonts.ButtonWithFont
        android:id="@+id/btnPasswordRecovery"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:textSize="?attr/thmButtonTextSize"
        android:letterSpacing="?attr/thmButtonLetterSpacing"
        android:text="@string/forgot_password_send"
        android:textColor="?attr/thmLoginButtonTextColor"
        app:font_name="?attr/thmMainFontName"
        app:font_type="?attr/thmMainFontTypeMedium"
        android:background="?attr/thmMainButtonBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
